force-app/main/default/objects/SAP_Config__mdt/SAP_Config__mdt.object-meta.xml
<CustomObject>
    <label>SAP Config</label>
    <pluralLabel>SAP Config</pluralLabel>
</CustomObject>