force-app/main/default/objects/SAP_Config__mdt/fields/COMPANY_DB__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_DB__c</fullName>
    <label>COMPANY_DB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>