force-app/main/default/objects/SAP_Config__mdt/fields/PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>PASSWORD__c</fullName>
    <label>PASSWORD</label>
    <length>200</length>
    <type>Text</type>
</CustomField>