force-app/main/default/objects/SAP_Config__mdt/fields/SAP_BASE_URL__c.field-meta.xml
<CustomField>
    <fullName>SAP_BASE_URL__c</fullName>
    <label>SAP_BASE_URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>