force-app/main/default/objects/SAP_Config__mdt/fields/USERNAME__c.field-meta.xml
<CustomField>
    <fullName>USERNAME__c</fullName>
    <label>USERNAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>